--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@wordpress/i18n": "^5.25.0",
     "@wordpress/scripts": "^30.18.0",
     "@wordpress/stylelint-config": "^23.17.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "dir-archiver": "^2.1.0",
     "sass": "^1.77.8"
   },
