--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "scripts": {
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
         "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor .",
-        "make-pot": "wp i18n make-pot . languages/sunflower.pot"
+        "make-pot": "wp i18n make-pot . languages/sunflower-map-points.pot && wp i18n make-pot . languages/sunflower-map-points-map.pot --slug=sunflower-map-points-map --domain=sunflower-map-points-map --exclude=node_modules,src && wp i18n make-json languages/ --no-purge"
     },
     "config": {
         "allow-plugins": {
