--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss' 'src/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js' 'src/**/*.js' 'assets/js/*.js'",
     "lint:jsa": "wp-scripts lint-js",
-    "copy-node-modules": "copyfiles -u 1 node_modules/jquery-slim/dist/*.min.js node_modules/bootstrap/dist/js/*.min.js node_modules/leaflet/dist/*.js node_modules/leaflet/dist/*.css node_modules/leaflet/dist/images/* assets/vndr",
+    "copy-node-modules": "copyfiles -u 1 node_modules/bootstrap/dist/js/*.min.js node_modules/leaflet/dist/*.js node_modules/leaflet/dist/*.css node_modules/leaflet/dist/images/* assets/vndr",
     "bundle": "npm run copy-node-modules && cd ../ && dir-archiver --src sunflower-map-points --dest sunflower-map-points.zip --includebasedir true --exclude Makefile create-changelog.php changelog.html documentation mkdocs .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map .favorites.json",
     "build": "wp-scripts build",
     "start": "wp-scripts start",
@@ -41,7 +41,6 @@
   },
   "dependencies": {
     "copyfiles": "^2.4.1",
-    "jquery-slim": "^3.0.0",
     "leaflet": "^1.9.4",
     "pa11y": "^8.0"
   },
